feat(seed): add dark/light theme support
Add full theming with CSS custom properties, ThemeProvider context,
and ThemeToggle component. Includes localStorage persistence and
prefers-color-scheme detection. All existing components automatically
support theming via semantic token classes.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>design-system-bundle</title>
+    <script>
+      // Prevent flash of unstyled content (FOUC) by applying theme before render
+      (function() {
+        const t = localStorage.getItem('design-system-theme') || 'system';
+        const d = t === 'dark' || (t === 'system' && matchMedia('(prefers-color-scheme:dark)').matches);
+        document.documentElement.classList.add(d ? 'dark' : 'light');
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
